<resources>
    <string name="app_name">Orgafarma</string>


    <!-- login -->
    <string name="lbl_senha">Senha</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="btn_logar">Logar</string>
    <string name="url_site">www.orgafarma.com.br</string>
    <string name="digite_usuario">Digite o seu usuário</string>
    <string name="digite_senha">*********</string>

    <string name="action_settings">Configuração</string>

    <!-- Mensagens Login -->
    <string name="msg_login_senha_obg">Login e Senha obrigatórios</string>
    <string name="msg_login_obg">Preencher o campo Login</string>
    <string name="msg_senha_obg">Preencher o campo Senha</string>
    <string name="msg_login_sucesso">Logado com Sucesso</string>
    <string name="msg_login_invalido">Usuário ou Senha inválidos</string>

    <!-- fragment cotação -->
    <string name="produto">Produto</string>
    <string name="add">Adicionar</string>
    <string name="cotacao">Cotação</string>
    <string name="valor">Valor</string>
    <string name="qtd">Quantidade</string>
    <string name="concluir">Concluir</string>
    <string name="items">Itens</string>
    <string name="generico">Aceito genérico deste remédio</string>
    <string name="descricao_vazio">O campo descrição está vazio</string>
    <string name="cliente_vazio">O campo cliente está vazio</string>
    <string name="produto_nao_cadastrado">Produto não cadastrado</string>
    <string name="cliente_nao_cadastrado">Cliente não cadastrado :-(</string>
    <string name="cotacao_realizada">Cotação realizada com sucesso!        ;-) </string>
    <string name="cotacao_falha">Falha no envio da cotação        :-( </string>
    <string name="sem_conexao">Conecte-se para enviar a cotação :-|</string>
    <string name="Cliente">Cliente</string>
    <string name="indefined">Indefinido</string>
    <string name="pendente">Pendente</string>
    <string name="finalizados">Finalizados</string>
    <string name="prob_config">Estamos com problemas de configuração :-(</string>
    <string name="data_n_config">Data em formato errado</string>

    <!-- ver cotações -->
    <string name="ver_cotacoes">Ver Cotações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_no_connection">NoConnection</string>


</resources>
