<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="600dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_above="@id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="600dp"
        android:layout_height="420dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/border_login_background"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        android:layout_margin="0dp">

        <TextView
            android:id="@+id/lbl_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:text="@string/lbl_usuario"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/edt_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:drawablePadding="@dimen/padding_minimum"
            android:drawableStart="@drawable/ic_account_grey600_24dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:text="@string/lbl_senha"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_small"
            android:drawablePadding="@dimen/padding_minimum"
            android:drawableStart="@drawable/ic_lock_outline_grey600_24dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/margin_bottom_small"
            android:background="@drawable/button_custom_login"
            android:onClick="logar"
            android:text="@string/btn_logar" />

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Lembrar Login?"
            android:textColor="#000" />



    </LinearLayout>

    <TextView
        android:id="@+id/txt_urlorgafarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:text="@string/url_site"
        android:textColorHighlight="#019cae"
        android:textColorLink="#000" />


</RelativeLayout>