<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".Fragment.CotacaoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produto"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <AutoCompleteTextView
            android:id="@+id/descricao_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:hint="Digite a descrição do produto"
            android:inputType="textAutoComplete"
            android:padding="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <AutoCompleteTextView
            android:id="@+id/valor_edit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="40dp"
            android:background="@android:drawable/editbox_background"
            android:hint="Valor"
            android:inputType="number"
            android:padding="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/qtd"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="#000" />

            <AutoCompleteTextView
                android:id="@+id/quantidade_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:background="@android:drawable/editbox_background"
                android:hint="Quantidade"
                android:inputType="number"
                android:maxWidth="150dp"
                android:padding="15dp"
                android:maxLength="5"
                />

            <ImageView
                android:id="@+id/remove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_remove_black_24dp"
                android:tint="#000" />
        </LinearLayout>

    </LinearLayout>

    <com.rey.material.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_with_corner_black"
        android:padding="15dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/md_grey_900"
        app:rd_enable="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_with_corner"
            android:padding="5dp"
            android:layout_above="@+id/concluir_btn"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <helperClass.ExpandableListView
                    android:id="@+id/list_produto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <helperClass.ExpandableListView
                    android:id="@+id/list_valor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <helperClass.ExpandableListView
                    android:id="@+id/list_qtd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
        </ScrollView>


        <com.rey.material.widget.Button
            android:id="@+id/concluir_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_with_corner_black"
            android:padding="15dp"
            android:text="@string/concluir"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:rd_enable="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
</LinearLayout>
